Ajouter du padding au menu principale

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <button  class="button">Page 3</button>
   </div>
 
+<div style="padding: 25px;">
+    <h1>Bienvenu</h1>
+    <p>textfewfefewfegergqrgeqgeRB  ERBERBEQRB</p>
+</div>
 
-
-</header>
     
     
 </body>
