J'ai changer les titres

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 <div class="top-bar">
     <h1>Mistral</h1>
-    <button  class="button">Page 1</button>
-    <button  class="button">Page 2</button>
-    <button  class="button">Page 3</button>
+    <button  class="button">porte folio des projets</button>
+    <button  class="button">presentation de l'equipe</button>
+    <button  class="button">profils des developpeurs</button>
   </div>
 
 
