Les bouton fonctionne et ajouter une image et du texte a la page d'acceuile

--- a/realisations.html
+++ b/realisations.html
@@ -9,7 +9,6 @@
 <body>
 <div class="top-bar">
     <h1>Mistral</h1>
-    <button  class="button">acceuille</button>
-    <button  class="button">presentation de l'equipe</button>
-    <button  class="button">profils des developpeurs</button>
+    <button  class="button">Projets</button>
+    <button  class="button">Notre équipe</button>
   </div>
