--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
 <div class="top-bar">
-    <h1>Mistral</h1>
-    <button  class="button">porte folio des projets</button>
-    <button  class="button">presentation de l'equipe</button>
-    <button  class="button">profils des developpeurs</button>
+    <h1><a class="brand-link" href="index.html">Mistral</a></h1>
+    <a class="button" href="projets.html">Projets</a>
+    <a class="button" href="equipe.html">Notre équipe</a>
   </div>
 
-<div style="padding: 25px;">
-    <h1>Bienvenu</h1>
-    <p>textfewfefewfegergqrgeqgeRB  ERBERBEQRB</p>
+<div class="content-row">
+    <div>
+        <h1>Qui nous sommes</h1>
+        <p>Mistral est une agence créative qui apporte un souffle nouveau dans le monde des entreprises. Nous croyons qu’innover, c’est surprendre, inspirer et repousser les limites de l’ordinaire.</p>
+    </div>
+    <img src="images/index/photo-1627896157734-4d7d4388f28b.jpg" alt="K2" class="side-image">
 </div>
 
     
