Add team presentation page, project page, and update index with navigation links
- Created equipe.html for team presentation with member descriptions.
- Added projets.html for showcasing projects.
- Updated index.html to include navigation links to the new pages.
- Added a new image for the index page and updated styles in style.css.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="top-bar">
     <h1><a class="brand-link" href="index.html">Mistral</a></h1>
-    <a class="button" href="projets.html">Projets</a>
+    <a class="button" href="realisations.html">Projets</a>
     <a class="button" href="equipe.html">Notre équipe</a>
   </div>
 
