une nouvelle class cree puis titre ameliorer et p ameliorer

--- a/realisations.html
+++ b/realisations.html
@@ -12,16 +12,16 @@
     <a class="button" href="equipe.html">Notre équipe</a>
   </div>
 
-  <div class="content-row">
-    <div>
-      <h1 >Nos projets</h1>
-      <p>bienvenue dans notre catalogue de projets realisés par notre agence de programmeurs.</p>
-    </div>
+  <div class="projets">
+  <div>
+    <h1>Nos realisations</h1>
+    <p>bienvenue dans notre catalogue de projets realisés par notre agence de programmeurs.</p>
   </div>
+</div>
 </body>
-<div>
-  <h1>Projets 1</h1>
-  <p>nous avons cree un site web pour un client pour sa boutique en ligne de vetements</p>
+<div class="projets">
+  <h1>site web d'une boutique en ligne</h1>
+  <p>notre groupe a cree un site web pour un client pour sa boutique en ligne de vetements</p>
 </div>
 <img
 </html>
