Ici j'ai mis un image avec une bordure,pas encore arranger

--- a/realisations.html
+++ b/realisations.html
@@ -23,5 +23,6 @@
   <h1>site web d'une boutique en ligne</h1>
   <p>notre groupe a cree un site web pour un client pour sa boutique en ligne de vetements</p>
 </div>
-<img
+<img src="images/index/Screenshot 2025-09-24 094409.png" alt="Boutique en ligne" class="image-projets">
+
 </html>
