mettre les photo plus gros

--- a/equipe.html
+++ b/equipe.html
@@ -26,19 +26,22 @@
 
         <section class="team">
             <article class="member">
-                <h3 class="nom-coequipier">Olivier Perron</h3>
+                <img src="images/oli.jpg" alt="Photo d'Olivier Perron" class="photo-coequipier">
+                <h2 class="nom-coequipier"><a href="oli.html">Olivier Perron</a></h2>
                 <p><strong>Rôle :</strong> Responsable de la page d'accueil.</p>
                 <p><strong>Description :</strong> Étudiant en informatique, passionné par l'informatique et aimant le travail en équipe.</p>
             </article>
 
             <article class="member">
-                <h3 class="nom-coequipier">Jakob</h3>
+                <img src="images/jakob.jpg" alt="Photo de Jakob Landaverde" class="photo-coequipier">
+                <h2 class="nom-coequipier"><a href="jakob.html">Jakob Landaverde</a></h2>
                 <p><strong>Rôle :</strong> Responsable du portfolio des projets.</p>
                 <p><strong>Description :</strong> Étudiant en informatique, créatif et passionné par les projets visuels.</p>
             </article>
 
             <article class="member">
-                <h3 class="nom-coequipier">Lemessy Belance</h3>
+                <img src="images/lemessy.jpg" alt="Photo de Lemessy Belance" class="photo-coequipier">
+                <h2 class="nom-coequipier"><a href="lemessy.html">Lemessy Belance</a></h2>
                 <p><strong>Rôle :</strong> Responsable de la présentation de l'équipe.</p>
                 <p><strong>Description :</strong> Étudiant en informatique, stratégique et passionné par l'analyse des systèmes.</p>
             </article>
