--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="content-row">
     <div>
         <h1>Qui nous sommes</h1>
-        <p>Mistral est une agence créative qui apporte un souffle nouveau dans le monde des entreprises. Nous croyons qu’innover, c’est surprendre, inspirer et repousser les limites de l’ordinaire.</p>
+        <p>Mistral est une agence créative qui apporte un souffle nouveau dans le monde des entreprises. Nous croyons qu'innover, c'est surprendre, inspirer et repousser les limites de l’ordinaire.</p>
     </div>
     <img src="images/index/photo-1627896157734-4d7d4388f28b.jpg" alt="K2" class="side-image">
 </div>
