--- a/jakob.html
+++ b/jakob.html
@@ -15,6 +15,6 @@
     </header>
     <main>
         <h2>Jakob Landaverde</h2>
-        <img src="images/jakob.jpg" alt="Photo de Jakob Landaverde" style="max-width:300px; float:right; margin-left:40px;">
+    <img src="images/jakob.jpg" alt="Photo de Jakob Landaverde" class="photo-coequipier">
         <p>Responsable du portfolio des projets. Étudiant en informatique, créatif et passionné par les projets visuels.</p>
     </main>
