--- a/lemessy.html
+++ b/lemessy.html
@@ -15,7 +15,7 @@
 	</header>
 	<main>
 		<h2>Lemessy Belance</h2>
-		<img src="images/lemessy.jpg" alt="Photo de Lemessy Belance" style="max-width:300px; float:right; margin-left:40px;">
+		<img src="images/lemessy.jpg" alt="Photo de Lemessy Belance" class="photo-coequipier">
 		<p>Responsable de la présentation de l'équipe. Étudiant en informatique, stratégique et passionné par l'analyse des systèmes.</p>
 	</main>
 </body>
