--- a/oli.html
+++ b/oli.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <h2>Olivier Perron</h2>
-        <img src="images/oli.jpg" alt="Photo d'Olivier Perron" style="max-width:300px;">
+    <img src="images/oli.jpg" alt="Photo d'Olivier Perron" class="photo-coequipier">
         <p>Responsable de la page d'accueil. Étudiant en informatique, passionné par l'informatique et aimant le travail en équipe.</p>
     </main>
 </body>
