modif de la description de chaqu'un

--- a/equipe.html
+++ b/equipe.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8">
     <title>Bienvenue sur la page de présentation de notre équipe</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .photo-coequipier {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          margin-bottom: 1em; /* espace entre la photo et le texte */
+          float: none;
+        }
+        .member {
+          text-align: center;
+          max-width: 350px;
+          margin-left: auto;
+          margin-right: auto;
+          padding: 1em 0;
+        }
+        .team {
+          display: flex;
+          justify-content: center;
+          gap: 2em;
+          flex-wrap: wrap;
+        }
+    </style>
 </head>
 <body>
 
