--- a/jakob.html
+++ b/jakob.html
@@ -15,6 +15,7 @@
     </header>
     <main>
         <h2>Jakob Landaverde</h2>
-    <img src="images/jakob.jpg" alt="Photo de Jakob Landaverde" class="photo-coequipier">
-        <p>Responsable du portfolio des projets. Étudiant en informatique, créatif et passionné par les projets visuels.</p>
+    <img src="images/jakob.jpg" alt="Photo de Jakob Landaverde" class="photo-membre-grand">
+    <p><strong>Jakob – Responsable du portfolio des projets</strong><br>
+Jakob aime donner une belle allure aux projets. Étudiant en informatique, il aime tout ce qui ramène vers le design. En parallèle, il pratique du hockey sur glace avec un niveau quand même assez impressionnant.</p>
     </main>
