--- a/oli.html
+++ b/oli.html
@@ -15,8 +15,9 @@
     </header>
     <main>
         <h2>Olivier Perron</h2>
-    <img src="images/oli.jpg" alt="Photo d'Olivier Perron" class="photo-coequipier">
-        <p>Responsable de la page d'accueil. Étudiant en informatique, passionné par l'informatique et aimant le travail en équipe.</p>
+    <img src="images/oli.jpg" alt="Photo d'Olivier Perron" class="photo-membre-grand">
+    <p><strong>Olivier – Responsable de la page d’accueil</strong><br>
+Olivier aime travailler en équipe. Étudiant en informatique, il s’intéresse surtout au développement web et à la création de solutions concrètes. Son plaisir, c’est tout simplement clash royale, il essaye de monter d’arène. Il aime aussi les voyages et les séries.</p>
     </main>
 </body>
 </html>
