juste pour voir quelque chose

--- a/realisations.html
+++ b/realisations.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="top-bar">
-  <h1><a class="brand-link" href="index.html">Mistral</a></h1>
+    <h1><a class="brand-link" href="index.html">Mistral</a></h1>
     <a class="button" href="realisations.html">Projets</a>
     <a class="button" href="equipe.html">Notre équipe</a>
   </div>
@@ -20,9 +20,15 @@
 </div>
 </body>
 <div class="projets">
-  <h1>site web d'une boutique en ligne</h1>
-  <p>notre groupe a cree un site web pour un client pour sa boutique en ligne de vetements</p>
+  <h1>site web</h1>
+  <p>notre groupe a cree un site web pour un client pour sa boutique de vetements.Nous lui avons fourni </p>
+  <img src="images/index/Screenshot 2025-09-24 094409.png" alt="Boutique en ligne" class="image-projets">
+<body>
+  <div class="projets">
+    <h1>application mobile</h1>
+    <p>notre groupe a cree une application mobile pour un client pour son agence de sport</p>
+</body>
+<div class="projets">
+<h1>site web sportif</h1>
+<p>voici un creation que nous avons fait pour une equipe sportive d'hockey.</p>
 </div>
-<img src="images/index/Screenshot 2025-09-24 094409.png" alt="Boutique en ligne" class="image-projets">
-
-</html>
