arranger code tout monde puis avance dans ma page, puis separer css

--- a/jakob.html
+++ b/jakob.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Jakob Landaverde</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header class="top-bar">
-        <h1><a class="brand-link" href="index.html">Mistral</a></h1>
-        <nav>
-            <a class="button" href="realisations.html">Projets</a>
-            <a class="button" href="equipe.html">Notre équipe</a>
-        </nav>
+      <h1><a class="brand-link" href="index.html">Mistral</a></h1>
+      <nav>
+        <a class="button" href="realisations.html">Projets</a>
+        <a class="button" href="equipe.html">Notre équipe</a>
+      </nav>
     </header>
     <main>
-        <h2>Jakob Landaverde</h2>
-    <img src="images/jakob.jpg" alt="Photo de Jakob Landaverde" class="photo-membre-grand">
-    <p><strong>Jakob – Responsable du portfolio des projets</strong><br>
-Jakob aime donner une belle allure aux projets. Étudiant en informatique, il aime tout ce qui ramène vers le design. En parallèle, il pratique du hockey sur glace avec un niveau quand même assez impressionnant.</p>
+      <h2>Jakob Landaverde</h2>
+      <img
+        src="images/jakob.jpg"
+        alt="Photo de Jakob Landaverde"
+        class="photo-membre-grand"
+      />
+      <p>
+        <strong>Jakob – Responsable du portfolio des projets</strong><br />
+        Jakob aime donner une belle allure aux projets. Étudiant en
+        informatique, il aime tout ce qui ramène vers le design. En parallèle,
+        il pratique du hockey sur glace avec un niveau quand même assez
+        impressionnant.
+      </p>
     </main>
+  </body>
+</html>
