--- a/lemessy.html
+++ b/lemessy.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-	<meta charset="UTF-8">
-	<title>Page personnelle - Lemessy Belance</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<header class="top-bar">
-		<h1><a class="brand-link" href="index.html">Mistral</a></h1>
-		<nav>
-			<a class="button" href="realisations.html">Projets</a>
-			<a class="button" href="equipe.html">Notre équipe</a>
-		</nav>
-	</header>
-	<main>
-		<h2>Lemessy Belance</h2>
-		<img src="images/lemessy.jpg" alt="Photo de Lemessy Belance" class="photo-membre-grand">
-		<p><strong>Lemessy – Responsable de la présentation de l'équipe</strong><br>
-Étudiant en informatique, Lemessy est réfléchi. Il adore comprendre comment fonctionnent les systèmes. Passionné par la cybersécurité, il aime résoudre des problèmes complexes. En dehors des cours, il joue surtout à clash royale et aller au gym.</p>
-	</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Page personnelle - Lemessy Belance</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="top-bar">
+      <h1><a class="brand-link" href="index.html">Mistral</a></h1>
+      <nav>
+        <a class="button" href="realisations.html">Projets</a>
+        <a class="button" href="equipe.html">Notre équipe</a>
+      </nav>
+    </header>
+    <main>
+      <h2>Lemessy Belance</h2>
+      <img
+        src="images/lemessy.jpg"
+        alt="Photo de Lemessy Belance"
+        class="photo-membre-grand"
+      />
+      <p>
+        <strong>Lemessy – Responsable de la présentation de l'équipe</strong
+        ><br />
+        Étudiant en informatique, Lemessy est réfléchi. Il adore comprendre
+        comment fonctionnent les systèmes. Passionné par la cybersécurité, il
+        aime résoudre des problèmes complexes. En dehors des cours, il joue
+        surtout à clash royale et aller au gym.
+      </p>
+    </main>
+  </body>
 </html>
