--- a/oli.html
+++ b/oli.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Page personnelle - Olivier Perron</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header class="top-bar">
-        <h1><a class="brand-link" href="index.html">Mistral</a></h1>
-        <nav>
-            <a class="button" href="realisations.html">Projets</a>
-            <a class="button" href="equipe.html">Notre équipe</a>
-        </nav>
+      <h1><a class="brand-link" href="index.html">Mistral</a></h1>
+      <nav>
+        <a class="button" href="realisations.html">Projets</a>
+        <a class="button" href="equipe.html">Notre équipe</a>
+      </nav>
     </header>
     <main>
-        <h2>Olivier Perron</h2>
-    <img src="images/oli.jpg" alt="Photo d'Olivier Perron" class="photo-membre-grand">
-    <p><strong>Olivier – Responsable de la page d’accueil</strong><br>
-Olivier aime travailler en équipe. Étudiant en informatique, il s’intéresse surtout au développement web et à la création de solutions concrètes. Son plaisir, c’est tout simplement clash royale, il essaye de monter d’arène. Il aime aussi les voyages et les séries.</p>
+      <h2>Olivier Perron</h2>
+      <img
+        src="images/oli.jpg"
+        alt="Photo d'Olivier Perron"
+        class="photo-membre-grand"
+      />
+      <p>
+        <strong>Olivier – Responsable de la page d’accueil</strong><br />
+        Olivier aime travailler en équipe. Étudiant en informatique, il
+        s’intéresse surtout au développement web et à la création de solutions
+        concrètes. Son plaisir, c’est tout simplement clash royale, il essaye de
+        monter d’arène. Il aime aussi les voyages et les séries.
+      </p>
     </main>
-</body>
+  </body>
 </html>
