--- a/equipe.html
+++ b/equipe.html
@@ -1,74 +1,98 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Bienvenue sur la page de présentation de notre équipe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <style>
-        .photo-coequipier {
-          display: block;
-          margin-left: auto;
-          margin-right: auto;
-          margin-bottom: 1em; /* espace entre la photo et le texte */
-          float: none;
-        }
-        .member {
-          text-align: center;
-          max-width: 350px;
-          margin-left: auto;
-          margin-right: auto;
-          padding: 1em 0;
-        }
-        .team {
-          display: flex;
-          justify-content: center;
-          gap: 2em;
-          flex-wrap: wrap;
-        }
+      .photo-coequipier {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 1em; /* espace entre la photo et le texte */
+        float: none;
+      }
+      .member {
+        text-align: center;
+        max-width: 350px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 1em 0;
+      }
+      .team {
+        display: flex;
+        justify-content: center;
+        gap: 2em;
+        flex-wrap: wrap;
+      }
     </style>
-</head>
-<body>
-
+  </head>
+  <body>
     <header class="top-bar">
-        <h1><a class="brand-link" href="index.html">Mistral</a></h1>
-        <nav>
-            <a class="button" href="realisations.html">Projets</a>
-            <a class="button" href="equipe.html">Notre équipe</a>
-        </nav>
+      <h1><a class="brand-link" href="index.html">Mistral</a></h1>
+      <nav>
+        <a class="button" href="realisations.html">Projets</a>
+        <a class="button" href="equipe.html">Notre équipe</a>
+      </nav>
     </header>
 
     <main>
+      <section>
+        <h2>Bienvenue sur la page de présentation de notre équipe</h2>
+      </section>
+      <section>
+        <p>Présentation de l'équipe.</p>
+      </section>
 
-        <section>
-            <h2>Bienvenue sur la page de présentation de notre équipe</h2>
-        </section>
-        <section>
-            <p>Présentation de l'équipe.</p>
-        </section>
+      <section class="team">
+        <article class="member">
+          <img
+            src="images/oli.jpg"
+            alt="Photo d'Olivier Perron"
+            class="photo-coequipier"
+          />
+          <h2 class="nom-coequipier"><a href="oli.html">Olivier Perron</a></h2>
+          <p><strong>Rôle :</strong> Responsable de la page d'accueil.</p>
+          <p>
+            <strong>Description :</strong> Étudiant en informatique, passionné
+            par l'informatique et aimant le travail en équipe.
+          </p>
+        </article>
 
-        <section class="team">
-            <article class="member">
-                <img src="images/oli.jpg" alt="Photo d'Olivier Perron" class="photo-coequipier">
-                <h2 class="nom-coequipier"><a href="oli.html">Olivier Perron</a></h2>
-                <p><strong>Rôle :</strong> Responsable de la page d'accueil.</p>
-                <p><strong>Description :</strong> Étudiant en informatique, passionné par l'informatique et aimant le travail en équipe.</p>
-            </article>
+        <article class="member">
+          <img
+            src="images/jakob.jpg"
+            alt="Photo de Jakob Landaverde"
+            class="photo-coequipier"
+          />
+          <h2 class="nom-coequipier">
+            <a href="jakob.html">Jakob Landaverde</a>
+          </h2>
+          <p><strong>Rôle :</strong> Responsable du portfolio des projets.</p>
+          <p>
+            <strong>Description :</strong> Étudiant en informatique, créatif et
+            passionné par les projets visuels.
+          </p>
+        </article>
 
-            <article class="member">
-                <img src="images/jakob.jpg" alt="Photo de Jakob Landaverde" class="photo-coequipier">
-                <h2 class="nom-coequipier"><a href="jakob.html">Jakob Landaverde</a></h2>
-                <p><strong>Rôle :</strong> Responsable du portfolio des projets.</p>
-                <p><strong>Description :</strong> Étudiant en informatique, créatif et passionné par les projets visuels.</p>
-            </article>
-
-            <article class="member">
-                <img src="images/lemessy.jpg" alt="Photo de Lemessy Belance" class="photo-coequipier">
-                <h2 class="nom-coequipier"><a href="lemessy.html">Lemessy Belance</a></h2>
-                <p><strong>Rôle :</strong> Responsable de la présentation de l'équipe.</p>
-                <p><strong>Description :</strong> Étudiant en informatique, stratégique et passionné par l'analyse des systèmes.</p>
-            </article>
-        </section>
+        <article class="member">
+          <img
+            src="images/lemessy.jpg"
+            alt="Photo de Lemessy Belance"
+            class="photo-coequipier"
+          />
+          <h2 class="nom-coequipier">
+            <a href="lemessy.html">Lemessy Belance</a>
+          </h2>
+          <p>
+            <strong>Rôle :</strong> Responsable de la présentation de l'équipe.
+          </p>
+          <p>
+            <strong>Description :</strong> Étudiant en informatique, stratégique
+            et passionné par l'analyse des systèmes.
+          </p>
+        </article>
+      </section>
     </main>
-
-</body>
+  </body>
 </html>
