--- a/lemessy.html
+++ b/lemessy.html
@@ -17,7 +17,7 @@
 		<h2>Lemessy Belance</h2>
 		<img src="images/lemessy.jpg" alt="Photo de Lemessy Belance" class="photo-membre-grand">
 		<p><strong>Lemessy – Responsable de la présentation de l'équipe</strong><br>
-Étudiant en informatique, Lemessy est réfléchi. Il adore comprendre comment fonctionnent les systèmes. Passionné par la cybersécurité, il aime résoudre des problèmes complexes. En dehors des cours, il joue surtout à clash royale et aller au gym.</p>
+Étudiant en informatique, Lemessy est malin. Il adore comprendre comment fonctionnent les systèmes. Passionné par la cybersécurité, il aime résoudre des problèmes complexes. En dehors des cours, il joue surtout à clash royale et il aime aller au gym.</p>
 	</main>
 </body>
 </html>
