--- a/realisations.html
+++ b/realisations.html
@@ -26,11 +26,11 @@
       <div class="gauche">
         <h1>Site web</h1>
         <p>
-          notre groupe a cree un site web pour un client pour sa boutique de
-          vetements.Nous lui avons fourninotre groupe a cree un site web pour un
-          client pour sa boutique de vetements.Nous lui avons fourninotre groupe
-          a cree un site web pour un client pour sa boutique de vetements.Nous
-          lui avons fourni
+          Voici un site web que nous avons créé pour une boutique en ligne.
+          Selon les demandes du client, nous avons mis une page Nouveautés et
+          même une catégorie Promotions pour accéder à tous les articles en
+          rabais. Nous avons conçu un site très simple pour ne pas perdre les
+          clients.
         </p>
       </div>
       <div class="droite">
@@ -45,13 +45,15 @@
       <div class="gauche">
         <h1>Application mobile</h1>
         <p>
-          notre groupe a cree une application mobile pour un client pour son
-          agence de sport
+          Voici une application mobile que nous avons créée pour suivre le
+          nombre de pas effectués dans une journée. Dans l’application, nous
+          avons ajouté des catégories Statistiques, Objectifs et Profil afin que
+          l’utilisateur puisse consulter ses progrès.
         </p>
       </div>
       <div class="droite">
         <img
-          src="images/index/Screenshot 2025-09-24 094409.png"
+          src="images/image d'application sur iphone.png"
           alt="Boutique en ligne"
           class="image-projets"
         />
@@ -61,13 +63,16 @@
       <div class="gauche">
         <h1>Site web sportif</h1>
         <p>
-          voici un creation que nous avons fait pour une equipe sportive
-          d'hockey.
+          Voici une création que nous avons faite pour une équipe sportive
+          d’hockey. Nous avons mis une page À propos présentant le club et une
+          page de contact pour envoyer des emails et contacter l’équipe. Le site
+          a été conçu de manière simple et dynamique pour représenter l’esprit
+          sportif et la passion du hockey.
         </p>
       </div>
       <div class="droite">
         <img
-          src="images/index/Screenshot 2025-09-24 094409.png"
+          src="images/image d'hockey website.png"
           alt="Boutique en ligne"
           class="image-projets"
         />
