Changement du logo et des couleur du site.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
       </div>
       <img
-        src="images/index/photo-1627896157734-4d7d4388f28b.jpg"
+        src="images/index/logo.png"
         alt="K2"
         class="side-image"
       />
